--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium corporis sapiente omnis dolor eaque repellat?</p>
     <a href="#">Back home</a>
 </div>
+
+<div>
+    <p>Lorem, ipsum dolor.</p>
+</div>
 </main>
     
 </body>
